--- a/index.html
+++ b/index.html
@@ -5,31 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Here is the output</h1>
-
-    <article id="buttonPad">
-        <button>AC</button>
-        <button>+/-</button>
-        <button>%</button>
-        <button>/</button>
-        <button class="numberButton">7</button>
-        <button class="numberButton">8</button>
-        <button class="numberButton">9</button>
-        <button class="operatorButton">X</button>
-        <button class="numberButton">4</button>
-        <button class="numberButton">5</button>
-        <button class="numberButton">6</button>
-        <button class="operatorButton">-</button>
-        <button class="numberButton">1</button>
-        <button class="numberButton">2</button>
-        <button class="numberButton">3</button>
-        <button class="operatorButton">+</button>
-        <button>Redo</button>
-        <button class="numberButton">0</button>
-        <button>.</button>
-        <button class="operatorButton">=</button>
-    </article>
+    <h1>Calculator</h1>
+    
+    <!-- div for the calculator layout-->
+    <div id="calculator">
+        <!-- div for the calculator's output display -->
+        <div id="display">
+            <h2>Output</h2>
+        </div>
+        <!-- div for the button pad -->
+        <div id="buttonPad">
+            <button>AC</button>
+            <button>+/-</button>
+            <button>%</button>
+            <button>/</button>
+            <button class="numberButton">7</button>
+            <button class="numberButton">8</button>
+            <button class="numberButton">9</button>
+            <button class="operatorButton">X</button>
+            <button class="numberButton">4</button>
+            <button class="numberButton">5</button>
+            <button class="numberButton">6</button>
+            <button class="operatorButton">-</button>
+            <button class="numberButton">1</button>
+            <button class="numberButton">2</button>
+            <button class="numberButton">3</button>
+            <button class="operatorButton">+</button>
+            <button>Redo</button>
+            <button class="numberButton">0</button>
+            <button>.</button>
+            <button class="operatorButton">=</button>
+        </div>
+    </div>
+    
 </body>
 </html>
