--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <button class="numberButton">7</button>
             <button class="numberButton">8</button>
             <button class="numberButton">9</button>
-            <button class="operatorButton">X</button>
+            <button class="operatorButton">*</button>
             <button class="numberButton">4</button>
             <button class="numberButton">5</button>
             <button class="numberButton">6</button>
