Styled the calculator more by adding background and page colors, new font for the text, rounded buttons, and colored and rounded borders

--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Calculator</h1>
+
+    <div id="header">
+        <h1>My JS calculator</h1>
+    </div>
     
     <!-- div for the calculator layout-->
     <div id="calculator">
         <!-- div for the calculator's output display -->
         <div id="display">
-            <h2>Output</h2>
+            <p>Output</p>
         </div>
         <!-- div for the button pad -->
         <div id="buttonPad">
