--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <button class="numberButton">2</button>
             <button class="numberButton">3</button>
             <button class="operatorButton">+</button>
-            <button>Redo</button>
+            <button>^</button>
             <button class="numberButton">0</button>
             <button>.</button>
             <button class="operatorButton">=</button>
