--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         </div>
         <!-- div for the button pad -->
         <div id="buttonPad">
-            <button>AC</button>
-            <button>+/-</button>
-            <button>%</button>
-            <button>/</button>
+            <button class="operatorButton">+/-</button>
+            <button class="operatorButton">^</button>
+            <button class="operatorButton">%</button>
+            <button class="operatorButton">/</button>
             <button class="numberButton">7</button>
             <button class="numberButton">8</button>
             <button class="numberButton">9</button>
@@ -37,9 +37,9 @@
             <button class="numberButton">2</button>
             <button class="numberButton">3</button>
             <button class="operatorButton">+</button>
-            <button>^</button>
+            <button class="operatorButton">AC</button>
             <button class="numberButton">0</button>
-            <button>.</button>
+            <button class="operatorButton">.</button>
             <button class="operatorButton">=</button>
         </div>
     </div>
