Fixed some array bugs, and a display bug

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
         </div>
     </div>
     
+    <div id="stepsDisplay">
+        <h4>Previous Steps</h4>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
