--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
     
     <div id="stepsDisplay">
-        <h4>Previous Steps</h4>
+        <h4>Previous Steps:</h4>
     </div>
     <script src="script.js"></script>
 </body>
